k8s/kube-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: kube-deploy
  name: kube-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kube-deploy
    spec:
      containers:
      - image: kube-demo
        name: kube-demo
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        resources: {}


status: {}
