k8s/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongo-deploy
  name: mongo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo-deploy
    spec:
      containers:
      - image: mongo:5.0.24
        name: mongo
        ports:
        - containerPort: 27017
        resources: {}
status: {}
