k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-deploy
  name: mongo-svc
  namespace: kd
spec:
  clusterIP: 10.98.125.244
  clusterIPs:
  - 10.98.125.244
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo-deploy
  sessionAffinity: None
  type: ClusterIP
